clusters/mbk/platform/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-tunnel
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: tunnel.mbk.excloo.dev
