clusters/mbk/platform/headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/description: Kubernetes Dashboard
    gethomepage.dev/enabled: "true"
    monitoring.excloo.dev/enabled: "true"
    gethomepage.dev/group: Servers
    gethomepage.dev/href: https://app.invalid
    gethomepage.dev/icon: headlamp
    gethomepage.dev/name: Headlamp
  labels:
    app.kubernetes.io/name: headlamp
spec:
  hostnames:
    - headlamp.mbk.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
